# pmr-search

./: .gitignore  README.rst  pyproject.toml  setup.py
examples/: annotation.example.json  batch_annotation_query.py  embedding_free_text_query.py  embedding_ontology_query.py  sparql_query.py
pmr_search/: __init__.py  __main__.py  embeddingclient.py  modelsearch.py  sparqlclient.py
test/: __init__.py  test_search.py
